; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_string.c_mrb_str_empty_p.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_string.c_mrb_str_empty_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RString = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_str_empty_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_str_empty_p(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.RString*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call %struct.RString* @mrb_str_ptr(i32 %6)
  store %struct.RString* %7, %struct.RString** %5, align 8
  %8 = load %struct.RString*, %struct.RString** %5, align 8
  %9 = call i64 @RSTR_LEN(%struct.RString* %8)
  %10 = icmp eq i64 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @mrb_bool_value(i32 %11)
  ret i32 %12
}

declare dso_local %struct.RString* @mrb_str_ptr(i32) #1

declare dso_local i32 @mrb_bool_value(i32) #1

declare dso_local i64 @RSTR_LEN(%struct.RString*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
